syntax = "proto3";

package project;

option go_package = "github.com/fusionharbor/microservices/api/project";

service ProjectService {
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse);
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
  rpc GetProjects(GetProjectsRequest) returns (GetProjectsResponse); // New RPC for getting all projects
}

message GetProjectRequest {
  string id = 1;
}

message GetProjectResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
}

message CreateProjectResponse {
  string id = 1;
  string message = 2;
}

message DeleteProjectRequest {
  string id = 1;
}

message DeleteProjectResponse {
  string message = 1;
}

// GetProjectsRequest is the request message for the GetProjects RPC.
message GetProjectsRequest {}

// GetProjectsResponse is the response message for the GetProjects RPC.
message GetProjectsResponse {
  repeated Project projects = 1; // An array of projects
}

// Project represents a project. It's used in GetProjectsResponse.
message Project {
  string id = 1;
  string name = 2;
  string description = 3;
}